--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+	<div class="holder">
+		<div class="box1">1</div>
+		<div class="box2">2</div>
+		<div class="box3">3</div>
+	</div>
+
+	<h2>For flex-wrap illustration:</h2>
+	
+	<div class="item">
+		<div class="boxx1">1</div>
+		<div class="boxx2">2</div>
+		<div class="boxx3">3</div>
+		<div class="boxx4">4</div>
+		<div class="boxx5">5</div>
+		<div class="boxx6">6</div>
+		<div class="boxx7">7</div>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
